--- a/ams1117.html
+++ b/ams1117.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+    <canvas id="canvas"></canvas>
+    <script src="bg_animation.js"></script>
     <div class="parent">
         <div class="block">
                 <p><h2 style="text-align:center">Расчет преобразователя на AMS1117-ADJ</h2></p>
